# Crixus

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README  README.md  makefile
geometries/111116-box/: 0.box.h5sph  0.box_blend.h5sph  box.stl  box_blend.stl  box_blend_16.stl  box_coarse.stl  in
geometries/111123-cf/: 0.cf-regular-0.05.h5sph  0.cf-regular-pv.h5sph  0.cf.h5sph  cf-regular-0.05.stl  cf-regular-pv.stl  cf-regular.stl  cf.stl  cf_16.stl  in
resources/: convert_stl_to_geometry.py  spheric2.ini  spheric2_fshape.stl  test-triangle-size.c
src/: CMakeLists.txt  crixus.cpp  crixus.cu  crixus.h  crixus_d.cu  crixus_d.cuh  cuda_local.cuh  lock.cuh  return.h  vector_math.h
